# cli

./: .gitignore  Cargo.toml  LICENSE  README.md  godot.package
.github/actions/setup/: action.yml
.github/actions/test/: action.yml
.github/workflows/: check.yml  pr.yml  release.yml
.github/workflows/actions/test/: action.yml
src/: archive.rs  cache.rs  config_file.rs  conversions.rs  main.rs  npm.rs  package.rs  theme.rs  verbosity.rs
src/package/: parsing.rs
test-server/: Cargo.toml
test-server/src/: data.rs  lib.rs  main.rs
