[package]
name = "godot-package-manager"
version = "1.1.2"
edition = "2021"
authors = ["bendn <bend.n@outlook.com>"]
description = "A package manager for godot"
repository = "https://github.com/godot-package-manager/cli"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
deser-hjson = "1.0.2"
flate2 = "1.0.25"
lazy_static = "1.4.0"
regex = "1.7.0"
ureq = "2.5.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
tar = "0.4.38"
toml = "0.5.10"
sha1 = "0.10.5"
console = "0.15.4"
indicatif = "0.17.2"
anyhow = "1.0.68"
dialoguer = { version = "0.10.3", features = [] }
rayon = "1.6"

[dev-dependencies]
glob = "0.3.0"
sha2 = "0.10.6"
tempdir = "0.3.7"
