[package]
name = "godot-package-manager"
version = "1.2.1"
edition = "2021"
authors = ["bendn <bend.n@outlook.com>"]
description = "A package manager for godot"
repository = "https://github.com/godot-package-manager/cli"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
deser-hjson = "1.0.2"
flate2 = "1.0.25"
lazy_static = "1.4.0"
regex = "1.7.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
tar = "0.4.38"
toml = "0.5.10"
sha1 = "0.10.5"
console = "0.15.4"
indicatif = "0.17.2"
anyhow = "1.0.68"
dialoguer = { version = "0.10.3", default-features = false, features = [] }
reqwest = "0.11"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
async-recursion = "1.0.2"
futures = "0.3"
semver_rs = "0.2"
async-trait = "0.1.66"
http-cache-reqwest = "0.8.0"
reqwest-middleware = "0.2.1"

[dev-dependencies]
glob = "0.3.0"
sha2 = "0.10.6"
tempdir = "0.3.7"

[profile.release]
lto = true
strip = true
