[package]
name = "gpm"
version = "1.4.1"
edition = "2021"
authors = ["bendn <bend.n@outlook.com>"]
description = "A package manager for godot"
repository = "https://github.com/godot-package-manager/cli"
keywords = ["godot", "package-manager"]
categories = ["development-tools::build-utils", "game-development"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
deser-hjson = "1.0.2"
lazy_static = "1.4.0"
regex = "1.7.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
serde_yaml = "0.9.14"
tar = "0.4.38"
flate2 = "1.0.25"
zip = { version = "0.6", features = ["bzip2"] }
toml = "0.5.10"
sha1 = "0.10.5"
console = "0.15.4"
indicatif = "0.17.2"
anyhow = "1.0.68"
dialoguer = { version = "0.10.3", default-features = false, features = [] }
reqwest = "0.11"
tokio = { version = "1", features = ["macros", "net"] }
async-recursion = "1.0.2"
futures = "0.3"
semver_rs = "0.2"
async-trait = "0.1.66"
dashmap = "5.4.0"

[dev-dependencies]
test-server = { path = "test-server" }
glob = "0.3.0"
sha2 = "0.10.6"
tempfile = "3.5.0"
fastrand = "1.9.0"

[profile.dev]
debug = true

[profile.release]
lto = true
strip = true
